Add api endpoints createnewproject and getalltests
