# go/model_participant.go
@@ -1,0 +1,23 @@
+/*
+ * Test api for project
+ *
+ * This api is a test version to connect the backend and frontend
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+// Participant - participant of project
+type Participant struct {
+
+	// firstname of the participant
+	Firstame string `json:"firstame,omitempty"`
+
+	// lastname of the participant
+	Lastname string `json:"lastname,omitempty"`
+
+	// email address of the participant
+	EmailAddress string `json:"emailAddress,omitempty"`
+}
