# go/model_tests_for_account.go
@@ -1,0 +1,19 @@
+/*
+ * Test api for project
+ *
+ * This api is a test version to connect the backend and frontend
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type TestsForAccount struct {
+
+	// the id of a test
+	TestID string `json:"testID,omitempty"`
+
+	// the name of a test
+	TestName string `json:"testName,omitempty"`
+}
